# passlock-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  EXAMPLES.md  GITHUB_RELEASE.md  INSTALL.md  LICENSE  PRODUCTION_CLEANUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  REPOSITORY_POLISH.md  SECURITY.md  SECURITY_AUDIT.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
passlock/: __init__.py  cli.py  crypto.py  utils.py  vault.py
scripts/: deploy.bat  deploy.sh  generate_demo.py  make_demo.sh
tests/: __init__.py  test_crypto.py  test_redteam.py  test_stress.py  test_vault.py
