[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passlock-cli"
version = "0.1.0"
description = "Local-only encrypted password manager for terminal users"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "root-vector", email = "rootvector@outlook.com"}
]
keywords = ["security", "password-manager", "cli", "encryption", "argon2", "fernet", "password", "vault"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "argon2-cffi>=23.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "hypothesis>=6.0.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/root-vector/passlock-cli"
Documentation = "https://github.com/root-vector/passlock-cli#readme"
Repository = "https://github.com/root-vector/passlock-cli"
Issues = "https://github.com/root-vector/passlock-cli/issues"
Changelog = "https://github.com/root-vector/passlock-cli/releases"

[project.scripts]
passlock = "passlock.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
